--- a/css/styles.css
+++ b/css/styles.css
@@ -247,7 +247,7 @@ a:focus,
 }
 .header .header-menu-section .header-bottom .custom-navbar li a {
   color: #0b090e;
-  padding: 25px 50px;
+  padding: 25px 30px;
   display: inline-flex;
   position: relative;
   z-index: 0;
@@ -1170,6 +1170,46 @@ a:focus,
   .inner-feature-products .card {
     margin-bottom: 15px;
   }
+}
+
+.water-glasses-bg {
+  padding: 150px 0px;
+  background: url(../img/waterglass-bg.jpg) no-repeat center bottom;
+  background-size: cover;
+  background-attachment: fixed;
+}
+@media screen and (max-width: 599px) {
+  .water-glasses-bg {
+    padding: 40px 0px;
+  }
+}
+.water-glasses-bg h1,
+.water-glasses-bg p {
+  color: white;
+  border: none;
+  text-align: center;
+}
+
+.ofoh-videoplayer ul {
+  padding: 0px;
+  list-style: none;
+}
+.ofoh-videoplayer ul li .video-button {
+  padding: 15px;
+  border: none;
+  background-color: #f2f2f2;
+  width: 100%;
+  margin-bottom: 2px;
+  text-align: left;
+}
+.ofoh-videoplayer ul li .video-button.active {
+  background-color: #00a79d;
+  color: white;
+  font-weight: bold;
+}
+.ofoh-videoplayer video {
+  width: 100%;
+  height: 500px;
 }
 
 /*# sourceMappingURL=styles.css.map */
