--- a/css/styles.css
+++ b/css/styles.css
@@ -1193,6 +1193,8 @@ a:focus,
 .ofoh-videoplayer ul {
   padding: 0px;
   list-style: none;
+  height: 500px;
+  overflow: auto;
 }
 .ofoh-videoplayer ul li .video-button {
   padding: 15px;
@@ -1210,6 +1212,23 @@ a:focus,
 .ofoh-videoplayer video {
   width: 100%;
   height: 500px;
+}
+
+.youtube-list {
+  list-style: none;
+}
+.youtube-list li {
+  padding-bottom: 10px;
+}
+.youtube-list li .bi-youtube {
+  color: #ef4136;
+  margin-right: 10px;
+}
+.youtube-list li a {
+  color: #262262;
+}
+.youtube-list li a:hover {
+  color: #ef4136;
 }
 
 /*# sourceMappingURL=styles.css.map */
