--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1020,6 +1020,8 @@ a,
   ul {
     padding: 0px;
     list-style: none;
+    height: 500px;
+    overflow: auto;
     li {
       .video-button {
         padding: 15px;
@@ -1039,5 +1041,22 @@ a,
   video {
     width: 100%;
     height: 500px;
+  }
+}
+
+.youtube-list {
+  list-style: none;
+  li {
+    padding-bottom: 10px;
+    .bi-youtube {
+      color: $secondary-red;
+      margin-right: 10px;
+    }
+    a {
+      color: $secondary;
+      &:hover {
+        color: $secondary-red;
+      }
+    }
   }
 }
